<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="errormjt.mason980.fretter_android.fretter.MainMenuActivity">

    <Button
        android:text="@string/begin_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_game_mode"
        android:onClick="openGame"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_fret"
        android:layout_marginTop="8dp" />

    <Button
        android:text="@string/add_chords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit_mode"
        android:onClick="openEdit"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        android:layout_marginBottom="32dp" />

    <Button
        android:text="@string/reset_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset"
        android:onClick="resetStats"
        app:layout_constraintTop_toBottomOf="@+id/spnr_fret"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Spinner
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:id="@+id/spnr_string"
        app:layout_constraintLeft_toRightOf="@+id/txt_string"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Spinner
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:id="@+id/spnr_fret"
        app:layout_constraintLeft_toRightOf="@+id/txt_fret"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnr_string"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:text="@string/string_hint"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:id="@+id/txt_string"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginTop="24dp" />

    <TextView
        android:text="@string/fret_hint"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:id="@+id/txt_fret"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_string"
        android:layout_marginTop="16dp" />

    <Space
        android:layout_width="269dp"
        android:layout_height="111dp"
        android:id="@+id/space2"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_readme"
        android:layout_marginBottom="8dp" />
    <TextView
        android:text="@string/readme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_readme"
        android:autoLink="web"
        android:maxLines="100"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_author"
        android:layout_marginBottom="32dp" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_author"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_menu"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_menu"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_main_menu"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_menu"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
